# mkdocs-pdf-generate

./: .gitignore  404.html  4Dversions.csv  LICENSE.md  README.md  docs_requirements.txt  index.html  options.html  pyproject.toml  requirements.txt  setup.py  sitemap.xml
.github/workflows/: main.yml  mkdocs_test.yml
assets/: styles.css
changelog/: Changelog_R_0_2_1.txt  Changelog_R_0_2_2.txt  index.html
css/: custom.css
customise/: customisation.html
customise/customisation/: Customize_Plugin_R_0_2_2.txt  index.html
docs/: .gitignore  mkdocs.yml
docs/cover_template/: cover.html  custom.css  legal_terms.html.j2  options.html.j2
docs/docs/: changelog.md  index.md  options.md
docs/docs/css/: custom.css
docs/docs/customise/: customisation.md
docs/overrides/: main.html
docs/theme-handler/: cinder.py
mkdocs_pdf_generate/: cover.py  generate_csv.py  generate_txt.py  logger.py  options.py  plugin.py  renderer.py  toc.py  utils.py
mkdocs_pdf_generate/preprocessor/: __init__.py  prep.py
mkdocs_pdf_generate/preprocessor/content/: __init__.py  tabbed_block.py
mkdocs_pdf_generate/preprocessor/links/: __init__.py  transform.py  util.py
mkdocs_pdf_generate/styles/: __init__.py  _paging.css  _styles.css  _toc.css  cover.css  pdf-print.css  toc.css
mkdocs_pdf_generate/templates/: default_cover.html.j2  template.py
mkdocs_pdf_generate/templates/filters/: __init__.py  datetime.py  datetime_filter.py  url.py
mkdocs_pdf_generate/themes/: cinder.py  generic.py  material.py
options/: Plugin_Options_R_0_2_1.txt  Plugin_Options_R_0_2_2.txt  index.html
search/: search_index.json
