[tool.poetry]
name = "mkdocs-pdf-generate"
version = "0.2.2"
description = "An MkDocs plugin to generate individual PDF files from content pages."
readme = "README.md"
documentation = "https://isolveit.github.io/mkdocs-pdf-generate/"
repository = "https://github.com/iSOLveIT/mkdocs-pdf-generate/"
authors = [
    "Randy Duodu <duodurandy19@gmail.com>",
    "4D Systems <engineers@4dsystems.com.au>",
    "Juniel Cruz <cruz.juniel@gmail.com>"
]
maintainers = [
    "Randy Duodu <duodurandy19@gmail.com>",
]
license="MIT"
keywords = ["mkdocs", "pdf", "pdf-export", "pdf-generate", "weasyprint"]
classifiers=[
        'Development Status :: 4 - Beta',
        'Intended Audience :: Developers',
        'License :: OSI Approved :: MIT License',
        'Operating System :: OS Independent',
        'Programming Language :: Python',
        'Programming Language :: Python :: 3',
        'Programming Language :: Python :: 3.8',
        'Programming Language :: Python :: 3.9',
        'Programming Language :: Python :: 3.10',
        'Topic :: Software Development :: Documentation',
        'Topic :: Text Processing :: Markup :: Markdown'
    ]

packages = [
    {include = "mkdocs_pdf_generate"}
]

[tool.poetry.plugins."mkdocs.plugins"]
pdf-generate = "mkdocs_pdf_generate.plugin:PdfGeneratePlugin"

[tool.poetry.dependencies]
python = ">=3.8.0,<4.0"
mkdocs = ">=1.4.2"
weasyprint = ">=54.0"
beautifulsoup4 = ">=4.6.3"
jinja2 = ">=3.0.0"
pypdf = ">=3.6.0"
pathlib = ">=1.0"
simple-file-checksum = ">=1.2.2"
mkdocs-material = ">=8.4.0"

[tool.poetry.dev-dependencies]
mkdocs-material-extensions = ">=1.0.3"
mkdocs-minify-plugin = ">=0.5.0"
# formatting dependencies
black = ">=22.3"
isort = ">=5.7.0"


[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[build-system]
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
